src/app/menu/menu.component.scss
:host {
  display: flex;
  flex-direction: column;
  align-items: center;

  z-index: 100;
}

.menu {
  position: absolute;

  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;

  transition: 0.2s;

  &_upper {
    top: 0;
  }

  &_bottom {
    bottom: 0;
  }
}

